# SoftRasterizer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Light.h  Rasterizer.cpp  Rasterizer.h  Triangle.cpp  Triangle.h  global.cpp  global.h  main.cpp  todo.md
